--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,355 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --header-bg-color: #fd100e;
+  --bg-color: #ffffff;
+  --text-color: #ffffff;
+  --item-container-bg-color: #ffffff;
+  --item-bg-color: #e5e7eb;
+  --item-text-color: #181818;
+  --add-item-underlay: rgb(255, 255, 255, 0.9);
+  --add-item-form: #e5e7eb;
+  --add-item-input-bg: #ffffff;
+  --add-item-input-text: #000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.dark-mode {
+  --header-bg-color: #181818;
+  --bg-color: #2c2c2c;
+  --text-color: #ffffff;
+  --item-container-bg-color: #2c2c2c;
+  --item-bg-color: #1e1e1e;
+  --item-text-color: #ffffff;
+  --add-item-underlay: rgb(30, 30, 30, 0.9);
+  --add-item-form: #181818;
+  --add-item-input-bg: #2c2c2c;
+  --add-item-input-text: #ffffff;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  background-color: var(--bg-color);
+  min-height: 100vh;
+  max-width: 385px;
+  width: 375px;
+  height: 100vh;
+  margin: auto auto;
+}
+
+header {
+  max-width: calc(375px + 20px);
+  width: 100%;
+  height: 70px;
+  background-color: var(--header-bg-color);
+  color: var(--text-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  .logo-span {
+    display: flex;
+    flex-direction: row;
+
+    .logo {
+      max-inline-size: 20px;
+      width: 50px;
+      margin-right: 5px;
+    }
+
+    .title {
+      margin: 0;
+      font-size: 20px;
+      font-weight: 700;
+    }
+  }
+}
+
+main {
+  min-height: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin-top: 95px;
+  margin-bottom: 95px;
+
+  .item-container {
+    background-color: var(--item-container-bg-color);
+    height: 100%;
+
+    width: 100%;
+
+    .item {
+      background-color: var(--item-bg-color);
+      margin: 20px;
+      list-style: none;
+      border-radius: 24px;
+      height: 76px;
+      width: 343px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      color: var(--item-text-color);
+
+      .item-span {
+        width: 80%;
+        overflow: scroll;
+
+        h2 {
+          font-size: 16px;
+        }
+
+        p {
+          font-size: 14px;
+          font-weight: 300;
+        }
+      }
+
+      .btn-span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        button {
+          cursor: pointer;
+          color: var(--text-color);
+          text-align: center;
+          height: 36px;
+
+          border: none;
+          border-radius: 24px;
+          margin: 3px;
+        }
+      }
+    }
+  }
+}
+
+.item-container-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  max-width: 375px;
+  width: 100%;
+  background-color: var(--item-container-bg-color);
+
+  .item-grid {
+    background-color: var(--item-bg-color);
+    width: 182px;
+    height: 150px;
+    list-style: none;
+    padding: 20px;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: var(--item-text-color);
+
+    .item-span {
+      width: 100%;
+      height: 50%;
+      overflow: scroll;
+
+      h2 {
+        font-size: 16px;
+      }
+
+      p {
+        font-size: 14px;
+        font-weight: 300;
+      }
+    }
+
+    .btn-span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 50%;
+      width: 100%;
+
+      button {
+        cursor: pointer;
+        color: var(--text-color);
+        text-align: center;
+        height: 36px;
+
+        border: none;
+        border-radius: 24px;
+        margin: 3px;
+      }
+    }
+  }
+}
+
+.add-item {
+  background-color: var(--header-bg-color);
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 80px;
+  right: 20px;
+  cursor: pointer;
+}
+
+footer {
+  max-width: calc(375px + 20px);
+  width: 100%;
+  height: 64px;
+  background-color: var(--header-bg-color);
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+
+  button {
+    background-color: var(--header-bg-color);
+    border: none;
+
+    img {
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
+
+.add-item-form-underlay {
+  background-color: var(--add-item-underlay);
+  max-width: 100%;
+  height: 100vh;
+  width: 100%;
+  padding: 20px;
+  place-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  .add-item-form {
+    background-color: var(--add-item-form);
+    width: 100%;
+    height: 370px;
+    padding: 20px;
+    border-radius: 24px;
+
+    label {
+      width: 100%;
+      display: block;
+      margin-left: 10px;
+      margin-bottom: 5px;
+      color: var(--add-item-input-text);
+    }
+
+    input {
+      width: 100%;
+      height: 50px;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 24px;
+      border: none;
+      background-color: var(--add-item-input-bg);
+      color: var(--add-item-input-text);
+    }
+
+    button {
+      height: 50px;
+      border: none;
+      border-radius: 24px;
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  }
+}
+
+input[type="checkbox"] {
+  accent-color: var(--header-bg-color);
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.theme-toggle-btn {
+  background-color: var(--header-bg-color);
+  border: none;
+  cursor: pointer;
+
+  img {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.display-btn {
+  background-color: var(--header-bg-color);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
+  img {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+html {
+  touch-action: manipulation;
+}
+
+@media (min-width: 450px) {
+  header,
+  footer {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .add-item {
+    left: 60%;
+    transform: translateX(-50%);
+  }
+
+  .add-item-form-underlay {
+    max-width: 100%;
+    height: 100vh;
+
+    .add-item-form {
+      max-width: 375px;
+      width: 375px;
+
+      margin: 0 auto;
+    }
+  }
+}
+
+.filter-div {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  button {
+    width: 70px;
+    height: 50px;
+    background-color: var(--header-bg-color);
+    border: none;
+    border-radius: 5px;
+  }
 }
