--- a/src/index.css
+++ b/src/index.css
@@ -229,16 +229,17 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
+}
 
-  button {
-    background-color: var(--header-bg-color);
-    border: none;
-    cursor: pointer;
+.footer-btn {
+  background-color: var(--header-bg-color);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 
-    img {
-      width: 50px;
-      height: 50px;
-    }
+  img {
+    width: 50px;
+    height: 50px;
   }
 }
 
